--- a/about.css
+++ b/about.css
@@ -1,9 +1,8 @@
 .text-center{
     box-shadow: 3px 3px 5px skyblue;
-   border: 2px solid skyblue;
+   border-bottom: 2px solid skyblue;
    padding: 20px;
    font-weight: 700;
-   border-radius: 10px;
-   color: skyblue;
-   background-color:black;
+   border-radius: 5px;
+   color: black;
 }
